--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,11 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
+        <!-- main properties -->
         <mainClass>org.max.object.storage.data.agent.Main</mainClass>
 
+        <!-- libs -->
+        <assertj.core.version>3.23.1</assertj.core.version>
         <logback.version>1.2.3</logback.version>
         <sl4j.version>1.7.36</sl4j.version>
     </properties>
@@ -92,8 +95,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.core.version}</version>
             <scope>test</scope>
         </dependency>
 
