--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <assertj.core.version>3.23.1</assertj.core.version>
         <logback.version>1.2.3</logback.version>
         <sl4j.version>1.7.36</sl4j.version>
+        <sqlite.jdbc.version>3.39.3.0</sqlite.jdbc.version>
     </properties>
 
     <dependencies>
@@ -57,6 +58,13 @@
             <artifactId>helidon-webclient</artifactId>
         </dependency>
 
+        <!-- Access logs support -->
+        <dependency>
+            <groupId>io.helidon.webserver</groupId>
+            <artifactId>helidon-webserver-access-log</artifactId>
+        </dependency>
+
+
         <!-- logging, sl4j & logback -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -84,8 +92,9 @@
             <artifactId>helidon-dbclient-jdbc</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>${sqlite.jdbc.version}</version>
         </dependency>
 
         <!-- Test dependencies -->
