--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,15 @@
 server:
   port: 8080
   host: 0.0.0.0
+  access-log:
+    format: "%h %l %u %t %r %s %b %{Referer}i"
 
 binary:
   storage:
     type: "FILE"
     folder: "/Users/mstepan/repo/s3-like-object-storage/data-node-agent/data"
 
-
-
+db:
+  source: "jdbc"
+  connection:
+    url: "jdbc:sqlite:db/data-storage.db"
