--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,10 +1,18 @@
 server:
   port: 8080
   host: 0.0.0.0
+  access-log:
+    format: "%h %l %u %t %r %s %b %{Referer}i"
 
 binary:
   storage:
-    type: "MEMORY"
+    type: "FILE"
+    folder: "/Users/mstepan/repo/s3-like-object-storage/data-node-agent/data"
+
+db:
+  source: "jdbc"
+  connection:
+    url: "jdbc:sqlite:db/test-data-storage.db"
 
 security:
   enabled: false
